--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "node-fetch": "^2.6.0",
+    "redis": "^2.8.0",
     "uuid": "^3.3.3"
   }
 }
