--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
-    "node-fetch": "^2.6.0",
     "redis": "^2.8.0",
     "uuid": "^3.3.3"
   }
