--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "mysql": "^2.17.1",
     "redis": "^2.8.0",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-google": "^0.14.0"
   }
 }
