--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,40 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
-        "node": true
+        "commonjs": true,
+        "es6": true
     },
     "extends": [
-        "google"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
+        "ecmaVersion": 2018
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
+        "indent": [
+            "error",
+            "tab"
+        ],
+        "linebreak-style": [
+            "error",
+            "unix"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ]
     }
 }
